# anatomy-atlas

./: CMakeLists.txt  README.md  download_totalsegmentator.py  generate_phantom.py  requirements.txt  viewer.py
AnatomyAtlas/: AnatomyAtlas.py  CMakeLists.txt
AnatomyAtlas/Resources/: anatomy_data.json
AnatomyAtlas/Resources/UI/: AnatomyAtlas.ui
phantom/: label_map.json
